--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.image-offset{
+  max-width: 110px;
+  margin-left: -10px;
+  margin-top: -20px;
+}
